# ROS-SLAM

./: .gitignore  kill_process.sh  launch_turtlebot3_world.sh  수업가이드_Day2.ipynb
install/: local_setup.sh  setup.sh
install/1_pub_sub/lib/1_pub_sub/: processor  publisher  subscriber
install/1_pub_sub/share/1_pub_sub/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/4_avoild_obstacle/lib/4_avoild_obstacle/: avoid_processor  lidar_listener
install/6_localize_map/share/6_localize_map/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/6_localize_map/share/6_localize_map/config/: ekf.yaml
install/6_localize_map/share/6_localize_map/map/: custom_world.yaml
install/6_localize_map/share/6_localize_map/models/turtlebot3_burger/: model.sdf
log/: latest_build
map/: gazebo_world.pgm  gazebo_world.yaml  gazebo_world_0.01.pgm  gazebo_world_0.01.yaml  gazebo_world_0.1.pgm  gazebo_world_0.1.yaml  gazebo_world_0.1_v2.pgm  gazebo_world_0.1_v2.yaml
src/: create_ros2_python_pkg.sh
src/1_pub_sub/: setup.cfg  setup.py
src/1_pub_sub/1_pub_sub/: processor.py
src/1_pub_sub/launch/: pub_sub_launch.py
src/4_avoild_obstacle/: package.xml  setup.cfg  setup.py
src/4_avoild_obstacle/4_avoild_obstacle/: lidar_listener.py
src/5_tf_static/: package.xml  setup.cfg  setup.py
src/6_localize_map/: setup.cfg  setup.py
src/6_localize_map/config/: ekf.yaml  nav2_params.yaml
src/6_localize_map/launch/: custom_world_launch.py  localize_map_launch.py
src/6_localize_map/map/: custom_world.pgm
(+17 files in other folders)
